--- a/.github/workflows/publish-maven.yml
+++ b/.github/workflows/publish-maven.yml
@@ -4,15 +4,13 @@ on:
   push:
     branches:
       - release
-      - fix/publish-ci  # TODO: Remove after testing
 
 jobs:
   # Build SDK and Publish to Maven Central
   build-and-publish:
     name: Build & Publish SDK
     runs-on: ubuntu-latest
-    # TODO: Uncomment after testing
-    # environment: release
+    environment: release
     steps:
       - name: Checkout kit-android code
         uses: actions/checkout@v4
@@ -63,10 +61,9 @@ jobs:
         working-directory: TONWalletKit-Android
         run: ./gradlew syncWalletKitWebViewAssets
 
-      # COMMENTED OUT: Skipping unit tests for faster publishing
-      # - name: Run unit tests
-      #   working-directory: TONWalletKit-Android
-      #   run: ./gradlew :impl:testWebviewDebugUnitTest
+      - name: Run unit tests
+        working-directory: TONWalletKit-Android
+        run: ./gradlew :impl:testWebviewDebugUnitTest
 
       - name: Build WebView variant (Release)
         working-directory: TONWalletKit-Android
@@ -79,16 +76,15 @@ jobs:
           path: TONWalletKit-Android/impl/build/outputs/aar/impl-webview-release.aar
           retention-days: 7
 
-      # TODO: Uncomment after testing
-      # - name: Publish and Release to Maven Central
-      #   working-directory: TONWalletKit-Android
-      #   run: ./gradlew publishAndReleaseToMavenCentral --no-configuration-cache -PVERSION_NAME=${{ steps.version.outputs.version }}
-      #   env:
-      #     ORG_GRADLE_PROJECT_mavenCentralUsername: ${{ secrets.MAVEN_USERNAME }}
-      #     ORG_GRADLE_PROJECT_mavenCentralPassword: ${{ secrets.MAVEN_PASSWORD }}
-      #     ORG_GRADLE_PROJECT_signingInMemoryKeyId: ${{ secrets.SIGNING_KEY_ID }}
-      #     ORG_GRADLE_PROJECT_signingInMemoryKeyPassword: ${{ secrets.SIGNING_PASSWORD }}
-      #     ORG_GRADLE_PROJECT_signingInMemoryKey: ${{ secrets.GPG_KEY_CONTENTS }}
+      - name: Publish and Release to Maven Central
+        working-directory: TONWalletKit-Android
+        run: ./gradlew publishAndReleaseToMavenCentral --no-configuration-cache -PVERSION_NAME=${{ steps.version.outputs.version }}
+        env:
+          ORG_GRADLE_PROJECT_mavenCentralUsername: ${{ secrets.MAVEN_USERNAME }}
+          ORG_GRADLE_PROJECT_mavenCentralPassword: ${{ secrets.MAVEN_PASSWORD }}
+          ORG_GRADLE_PROJECT_signingInMemoryKeyId: ${{ secrets.SIGNING_KEY_ID }}
+          ORG_GRADLE_PROJECT_signingInMemoryKeyPassword: ${{ secrets.SIGNING_PASSWORD }}
+          ORG_GRADLE_PROJECT_signingInMemoryKey: ${{ secrets.GPG_KEY_CONTENTS }}
 
       - name: Publishing summary
         run: |
