--- a/AndroidDemo/app/src/main/AndroidManifest.xml
+++ b/AndroidDemo/app/src/main/AndroidManifest.xml
@@ -17,10 +17,25 @@
         android:usesCleartextTraffic="true">
         <activity
             android:name="io.ton.walletkit.demo.presentation.MainActivity"
-            android:exported="true">
+            android:exported="true"
+            android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+            <!-- TonConnect intent deep links -->
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data android:scheme="tc" />
+            </intent-filter>
+            <!-- TonConnect URL handling -->
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data android:scheme="tonconnect" />
             </intent-filter>
         </activity>
         
